# fpl2sql

./: .gitignore  .pre-commit-config.yaml  README.md
fpl2sql-extractor/: .envrc_example  .vercelignore  README.md  mypy.ini  package.json  pyproject.toml  vercel.json
fpl2sql-extractor/fpl2sql_extractor/: consts.py  main.py
fpl2sql-extractor/fpl2sql_extractor/api/: app.py
fpl2sql-extractor/fpl2sql_extractor/extractors/: bootstrap_extractor.py  element_summary_extractor.py  fixtures_extractor.py  utils.py
fpl2sql-extractor/fpl2sql_extractor/models/: bootstrap.py  element_summary.py  fixtures.py  last_updated.py
fpl2sql-extractor/utils/: package_sizes.py
fpl2sql-frontend/: .prettierrc  README.md  eslint.config.mjs  index.html  main.ts  package-lock.json  package.json  queries.ts  style.css  vite.config.ts
