[tool.poetry]
name = "fpl2sql_extractor"
version = "1.0.0"
description = "Bulid a DuckDB database for Fantasy Premier League"
authors = ["Colin Nattrass <cpnattrass@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dateutil = "^2.8.2"
duckdb = "^0.10.0"
requests = "^2.31.0"
pydantic = "^2.6.3"
urllib3 = "<2"
pandas = "^2.2.3"
aioboto3 = "^13.1.1"
aiofiles = "^24.1.0"
backoff = "^2.2.1"
starlette = "^0.39.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"
pyright = "^1.1.277"
mypy = "^0.982"
flake8 = "^5.0.4"
datamodel-code-generator = "^0.25.4"
pre-commit = "^3.6.2"
uvicorn = "^0.30.6"
types-setuptools = "^75.1.0.20240917"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
